= Release Notes
:drivers_repo: http://ocient-archive/ocientrepo/java/jdbc

All our jdbc drivers are located {drivers_repo}[here]. 
Below is the release notes for every driver version that has customer implication.

//tag::compact[]
== 2.34 (2021-9-9)

New Features::

 * Add token signature and issuer fingerprint fields to sso token handshake.

//tag::compact[]
== 2.33 (2021-9-7)

New Features::

 * Add support for explicit SSO handshakes
 * Revert executeQuery redirection change

//tag::compact[]
== 2.32 (2021-9-1)

New Features::

 * CLI source command stops on error
 * Support "output next query append"
 * Add statement command "get jdbc version"

//tag::compact[]
== 2.31 (2021-8-30)

New Features::

 * Add sso handshake support
 * Refactor duplicated code in handshakes for saving secondary interfaces

//tag::compact[]
== 2.30 (2021-8-26)

New Features::

 * Add validation on the driver side for set parameter settings.
 * Pass up invalid set parameter command errors.

//tag::compact[]
== 2.29 (2021-8-20)

New Features::

 * Fix the way connection resets parameters when reset is true.
 * Fix an issue where redirect was not properly using mapped secondary interfaces

//tag::compact[]
== 2.28 (2021-8-16)

New Features::

 * Fix sending parameters on reset. maxrow, maxtempdisk, maxtime, parallelism, priority now gets reset properly.
 * Map list all queries to select * from sys.queries
 * Improve logging
 * Statements with closed connections will not get returned to the cache

//tag::compact[]
== 2.27 (2021-8-10)

New Features::

 * Fixed poorly structured if statement in CLI source command.
 * Remove more stack trace printing and add more logs.

//tag::compact[]
== 2.26 (2021-7-30)

New Features::

 * Move the duplicated regex code in CLI.java and XGStatement.java into a new file.
 * Implement a generic regex for syntax checking the set family of sql commands.